# my-itmo-ru-to-ical

./: .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  vulture_whitelist.txt
.github/workflows/: code-checks.yml  image-builder.yml
config/: config.py.template
src/: app.py  auth.py  calendar_processing.py  credentials_hashing.py  creds.py  lessons_to_events.py  main_api.py  utils.py
src/utils/: error_handling.py
